wordwrap fix in survey on dashboard

--- a/css/survey.css
+++ b/css/survey.css
@@ -400,6 +400,7 @@
      top: -7px;
      left: 50%;
      transform: translateX(-50%);
+     white-space: nowrap;
 }
 
 @media only screen and (min-width:600px) {
